<resources>
    <string name="app_name">Apartify</string>
    <string name="home">Home</string>
    <string name="new_feeds">News feed</string>
    <string name="notification">Notifications</string>
    <string name="my">Me</string>
    <string name="welcome">Welcome back to the app.</string>
    <string name="email">Input your email</string>
    <string name="email_format_failed">Your email is not valid, please input again</string>
    <string name="password_format_failed">Your password should not be empty</string>
    <string name="password">Your password here</string>
    <string name="login_failed">Login unsuccessfully, please check again your credentials</string>
    <string name="signup_failed">Sign up unsuccessfully, please check again your credentials</string>
    <string name="login">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="apartify_version">Apartify version 1.0.0. @author: nat</string>
    <string name="or_you_dont_have_an_account_before">or you dont have an account before?</string>
    <string name="project_id">com.nat.app</string>
    <string name="news_feed">News feed</string>
    <string name="news_feed_detail">News feed details</string>
    <string name="seen">Seen</string>
</resources>