<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginStart="@dimen/sixteen"
        android:layout_marginTop="@dimen/logo_w_h"
        android:layout_marginEnd="@dimen/sixteen"
        android:autofillHints="false"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/text_common_size" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginStart="@dimen/sixteen"
        android:layout_marginTop="@dimen/sixteen"
        android:layout_marginEnd="@dimen/sixteen"
        android:autofillHints="false"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/text_common_size" />

    <LinearLayout
        android:id="@+id/indicator_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:gravity="center"
        android:orientation="vertical">

        <com.nat.app.components.LoadingButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_marginTop="@dimen/thirty_two"
            android:layout_marginEnd="@dimen/sixteen"
            android:background="@android:color/holo_red_light"
            android:backgroundTint="@color/gray_heavy"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small"
            app:enableRestore="true"
            app:enableShrink="true"
            app:endFailDrawable="@drawable/baseline_cancel_24"
            app:endSuccessDrawable="@drawable/baseline_check_circle_24"
            app:loadingDrawablePosition="Start"
            app:radius="50dp"
            app:shrinkShape="Oval" />
    </LinearLayout>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indicator_login"
        android:layout_marginStart="@dimen/sixteen"
        android:layout_marginTop="@dimen/thirty_two"
        android:layout_marginEnd="@dimen/sixteen"
        android:text="@string/or_you_dont_have_an_account_before"
        android:textAlignment="center"
        android:textSize="@dimen/text_small" />

    <LinearLayout
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/or"
        android:gravity="center"
        android:orientation="vertical">

        <com.nat.app.components.LoadingButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_marginTop="@dimen/thirty_two"
            android:layout_marginEnd="@dimen/sixteen"
            android:background="@android:color/holo_red_light"
            android:backgroundTint="@color/gray_heavy"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_small"
            app:enableRestore="true"
            app:enableShrink="true"
            app:endFailDrawable="@drawable/baseline_cancel_24"
            app:endSuccessDrawable="@drawable/baseline_check_circle_24"
            app:loadingDrawablePosition="Start"
            app:radius="50dp"
            app:shrinkShape="Oval" />
    </LinearLayout>
</RelativeLayout>
